# agent-sre

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
agent_sre/: agent.py  mcp_setup.py  prompts.py
agent_sre/phases/: cluster.py  observe.py  propose.py  ship.py  synthesize.py  validate.py  watch.py
dashboard/: runner.py  server.py
examples/: example-postmortem.md
infra/: README.md  deploy.sh
infra/phoenix/: Dockerfile
scripts/: make_video_script_pdf.py  seed_failures.py  serve_phoenix.py  spike.py  test_full_loop.py  test_phase1.py  test_phase2.py  test_phase34.py  test_phase56.py
shared/: config.py  instrumentation.py
ship_artifacts/: drift_history.jsonl
target_agent/: agent.py  prompts.py  tools.py
