[project]
name = "agent-sre"
version = "0.1.0"
description = "Autonomous Site Reliability Engineer for AI agents. Google Cloud Rapid Agent Hackathon — Arize track."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.13"
dependencies = [
    # Google Agent Development Kit + Gemini SDK
    "google-adk>=1.32.0",
    "google-genai>=1.9.0",

    # Arize Phoenix (observability) + OpenInference instrumentation
    "arize-phoenix>=7.0",
    "openinference-instrumentation-google-adk>=0.1.11",

    # OpenTelemetry exporters used by Phoenix
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["target_agent", "agent_sre", "shared", "dashboard"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
